cleanup and move user auth to own controller

--- a/RestaurantReviews/src/main/resources/templates/signup_form.html
+++ b/RestaurantReviews/src/main/resources/templates/signup_form.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="ISO-8859-1">
-    <title>Sign Up - CodeJava</title>
+    <title>Sign Up</title>
     <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
     <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
@@ -12,7 +12,7 @@
         <div>
             <h1>User Registration - Sign Up</h1>
         </div>
-        <form th:action="@{api/process_register}" th:object="${user}"
+        <form th:action="@{/process_register}" th:object="${user}"
             method="post" style="max-width: 600px; margin: 0 auto;">
         <div class="m-3">
             <div class="form-group row">
